Added 'New Game' option.

--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -337,6 +337,7 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <addaction name="actionNewGame"/>
     <addaction name="actionQuit"/>
    </widget>
    <addaction name="menu_File"/>
@@ -344,6 +345,14 @@
   <action name="actionQuit">
    <property name="text">
     <string>&amp;Quit</string>
+   </property>
+  </action>
+  <action name="actionNewGame">
+   <property name="text">
+    <string>&amp;New Game</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
    </property>
   </action>
  </widget>
@@ -472,8 +481,25 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionNewGame</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindowClass</receiver>
+   <slot>onNewGame()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>277</x>
+     <y>215</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onColorButton()</slot>
+  <slot>onNewGame()</slot>
  </slots>
 </ui>
